# ahlers-final-trie-app

trie-app/: CMakeLists.txt  README.md
trie-app/app/: main.cpp
trie-app/code/: trie.cpp  trie.h
trie-app/tests/: test_final.cpp
